<resources>
    <string name="app_name">Countries Quiz</string>
    <string name="title_text">Βρείτε σε ποιά χώρα αντιστοιχεί η σημαία ή το εθνόσημο!</string>
    <string name="skip">Επόμενη</string>
    <string name="flag_text">Η σημαία ανήκει στη χώρα </string>
    <string name="coat_of_arms_text">Το εθνόσημο ανήκει στη χώρα </string>
    <string name="play_button">Ξεκινήστε</string>
    <string name="europe_string">Ευρώπη</string>
    <string name="asia_string">Ασία</string>
    <string name="america_string">Αμερική</string>
    <string name="africa_string">Αφρική</string>
    <string name="oceania_string">Ωκεανία</string>
    <string name="antarctica_string">Ανταρκτική</string>
    <string name="world_string">Κόσμος</string>
    <string name="choose_contintent_text">Επιλέξτε ήπειρο</string>
    <string name="question">Σε ποιά χώρα ανήκει η σημαία;</string>
    <string name="number_of_question">η ερώτηση από 10</string>
    <string name="user_score">Τελικό σκορ χρήστη</string>
    <string name="quiz_time">Συνολικός χρόνος</string>
    <string name="exit">Έξοδος</string>
    <string name="start_new">Έναρξη</string>
</resources>