<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="wrap_content"
    android:layout_width="match_parent">

    <ScrollView
        android:id="@+id/questions_scroll_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp">

        <LinearLayout
            android:id="@+id/continent_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Button
                android:id="@+id/europe_button"
                style="@style/answerButtonLayout"
                android:text="@string/europe_string"
                tools:text="Europe" />

            <Button
                android:id="@+id/asia_button"
                style="@style/answerButtonLayout"
                android:text="@string/asia_string"
                tools:text="Asia" />

            <Button
                android:id="@+id/america_button"
                style="@style/answerButtonLayout"
                android:text="@string/america_string"
                tools:text="America" />

            <Button
                android:id="@+id/africa_button"
                style="@style/answerButtonLayout"
                android:text="@string/africa_string"
                tools:text="Africa" />

            <Button
                android:id="@+id/oceania_button"
                style="@style/answerButtonLayout"
                android:text="@string/oceania_string"
                tools:text="Oceania" />

            <Button
                android:id="@+id/antarctica_button"
                style="@style/answerButtonLayout"
                android:text="@string/antarctica_string"
                tools:text="Antarctica" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>
